# BeatSaberMapfileCreator

./: .gitignore  BeatSaberMapfileCreator.spec  LICENSE  README.md  THIRD_PARTY_LICENSES  build.py  pyproject.toml
src/: create_mapfile.py  load_cover.py  paths.py  ui.py  yt_music.py
templates/: AudioData.template  BPMInfo.template  V3Info.template  V4Info.template  environments.json
